--- a/day2/index.html
+++ b/day2/index.html
@@ -1,15 +1,219 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Cliq-like — Single File Mock</title>
+  <style>
+    /* ---------- Root / Theme ---------- */
+    :root{
+      --bg:#0f1724; /* deep blue */
+      --panel:#0b1220;
+      --muted:#9aa7bd;
+      --accent:#6ee7b7; /* teal */
+      --accent-2:#7c5cff; /* purple */
+      --glass: rgba(255,255,255,0.03);
+      --card:#0b1624;
+      --danger:#ff6b6b;
+      --radius:12px;
+      --glass-border: rgba(255,255,255,0.04);
+      --max-width:1200px;
+      font-family: Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
+    }
+    /* ---------- Reset ---------- */n
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0;
+      background:linear-gradient(180deg,var(--bg),#04101a 60%);
+      color:#e6eef8;
+      -webkit-font-smoothing:antialiased;
+      -moz-osx-font-smoothing:grayscale;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:28px;
+    }
+    /* ---------- Layout ---------- */
+    .app{
+      width:100%;
+      max-width:var(--max-width);
+      height:80vh;
+      display:grid;
+      grid-template-columns:260px 320px 1fr 300px;
+      gap:18px;
+      align-items:stretch;
+    }
+    .card{
+      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      border:1px solid var(--glass-border);
+      border-radius:var(--radius);
+      padding:12px;
+      display:flex;
+      flex-direction:column;
+      gap:12px;
+      box-shadow: 0 6px 20px rgba(2,6,23,0.6);
+      overflow:hidden;
+    }
+    /* ---------- Left Sidebar (Workspace) ---------- */
+    .workspace{min-width:220px}
+    .brand{
+      display:flex;align-items:center;gap:10px;padding:6px 8px
+    }
+    .logo{
+      width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent-2));display:flex;align-items:center;justify-content:center;font-weight:700;color:#04101a
+    }
+    .brand h1{font-size:15px;margin:0}
+    .search{
+      display:flex;align-items:center;gap:8px;padding:8px;border-radius:10px;background:var(--glass);border:1px solid var(--glass-border);
+    }
+    .search input{flex:1;background:transparent;border:0;outline:none;color:var(--muted)}
+    .nav{overflow:auto;padding:6px;display:flex;flex-direction:column;gap:6px}
+    .nav .section-title{font-size:11px;color:var(--muted);padding:6px 8px}
+    .item{
+      display:flex;align-items:center;gap:10px;padding:8px;border-radius:10px;cursor:pointer
+    }
+    .item:hover{background:rgba(255,255,255,0.02)}
+    .item.active{background:linear-gradient(90deg, rgba(124,92,255,0.12), rgba(110,231,183,0.06));border-left:3px solid var(--accent);padding-left:5px}
+    .avatar{width:36px;height:36px;border-radius:8px;background:linear-gradient(180deg,#2a4255,#122033);display:flex;align-items:center;justify-content:center;font-weight:600;color:var(--accent)}
+    .meta{flex:1}
+    .meta .title{font-size:13px}
+    .meta .sub{font-size:12px;color:var(--muted)}
+    .badge{background:var(--danger);padding:4px 8px;border-radius:999px;font-size:12px}
+
+    /* ---------- Channels List (2nd column) ---------- */
+    .channels{min-width:280px}
+    .channel-list{overflow:auto;flex:1;display:flex;flex-direction:column;gap:8px;padding-right:6px}
+    .channel-header{display:flex;justify-content:space-between;align-items:center}
+    .channel-item{display:flex;align-items:center;gap:10px;padding:10px;border-radius:10px;cursor:pointer}
+    .channel-item:hover{background:rgba(255,255,255,0.02)}
+    .channel-item.active{background:linear-gradient(90deg, rgba(124,92,255,0.06), rgba(110,231,183,0.03));}
+
+    /* ---------- Main chat pane ---------- */
+    .chat{
+      display:flex;flex-direction:column;min-width:420px;overflow:hidden
+    }
+    .chat-header{display:flex;align-items:center;justify-content:space-between;padding:12px;border-radius:10px}
+    .chat-title{display:flex;align-items:center;gap:12px}
+    .chat-window{flex:1;overflow:auto;padding:20px;display:flex;flex-direction:column;gap:12px}
+    .message-row{display:flex;gap:12px}
+    .message{max-width:65%;padding:10px 12px;border-radius:12px;background:linear-gradient(180deg,#06202b,#08232f);font-size:14px;color:#cfeff1}
+    .message.me{margin-left:auto;background:linear-gradient(180deg,#2b7a66,#1b5b46);color:white}
+    .msg-meta{font-size:11px;color:var(--muted);margin-top:6px}
+    .typing{font-style:italic;color:var(--muted)}
+
+    /* ---------- Composer ---------- */
+    .composer{display:flex;align-items:center;gap:10px;padding:10px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.015), transparent);border:1px solid var(--glass-border)}
+    .composer textarea{flex:1;resize:none;border:0;background:transparent;color:inherit;outline:none;padding:8px 4px;font-size:14px;border-radius:8px;height:46px}
+    .tool-btn{width:42px;height:42px;border-radius:10px;border:1px solid var(--glass-border);display:flex;align-items:center;justify-content:center;cursor:pointer}
+    .send{background:linear-gradient(90deg,var(--accent),var(--accent-2));border:0;color:#04101a;padding:10px 14px;border-radius:10px;cursor:pointer}
+
+    /* ---------- Right Pane: Details / Members ---------- */
+    .right .section{padding:8px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.01), transparent)}
+    .member{display:flex;align-items:center;gap:10px;padding:8px;border-radius:8px}
+    .status{width:10px;height:10px;border-radius:99px}
+    .online{background:#4ade80}
+    .away{background:#f59e0b}
+    .offline{background:#6b7280}
+
+    /* ---------- Small helpers ---------- */
+    .muted{color:var(--muted)}
+    .flex{display:flex;gap:8px;align-items:center}
+    .center{display:flex;align-items:center;justify-content:center}
+    .search-compact{padding:6px;border-radius:8px;background:var(--glass);border:1px solid var(--glass-border)}
+
+    /* ---------- Responsive tweaks ---------- */
+    @media (max-width:1100px){
+      .app{grid-template-columns:200px 1fr;grid-auto-rows:1fr}
+      .channels,.right{display:none}
+      .chat{min-width:0}
+    }
+  </style>
 </head>
 <body>
-    <h1></h1>
-    <h1>This is Bharkavi Nandhakumar </h1>
-    <h2>From the Department of Artificial Intelligence and DataScience</h2>
-    <p>I am a pre-finalier student in Rajalakshmi Engineering College at Thandalam</p>
-    <h3></h3>
-</body>
-</html>
+  <div class="app" role="application" aria-label="Chat app mock">
+
+    <!-- Workspace / leftmost -->
+    <aside class="card workspace" aria-label="workspace sidebar">
+      <div class="brand">
+        <div class="logo">C</div>
+        <div>
+          <h1>Cliq-ish</h1>
+          <div class="muted" style="font-size:12px">Team Workspace</div>
+        </div>
+      </div>
+
+      <div class="search">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"><path d="M21 21l-4.35-4.35" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path><circle cx="11" cy="11" r="6" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></circle></svg>
+        <input id="workspace-search" placeholder="Search or jump" aria-label="workspace search" />
+      </div>
+
+      <nav class="nav" aria-label="workspace nav">
+        <div class="section-title">Favourites</div>
+        <div class="item active" data-id="#general"><div class="avatar">G</div><div class="meta"><div class="title"># general</div><div class="sub">Company-wide</div></div><div class="badge">3</div></div>
+        <div class="item" data-id="#dev"><div class="avatar">D</div><div class="meta"><div class="title"># dev</div><div class="sub">Engineering</div></div></div>
+
+        <div class="section-title">Recent</div>
+        <div class="item" data-id="#design"><div class="avatar">DS</div><div class="meta"><div class="title"># design</div><div class="sub">UI/UX</div></div></div>
+        <div class="item" data-id="#sales"><div class="avatar">S</div><div class="meta"><div class="title"># sales</div><div class="sub">Deals & CRM</div></div></div>
+
+        <div class="section-title">People</div>
+        <div class="item" data-id="#maya"><div class="avatar">M</div><div class="meta"><div class="title">Maya</div><div class="sub">Product</div></div></div>
+        <div class="item" data-id="#arun"><div class="avatar">A</div><div class="meta"><div class="title">Arun</div><div class="sub">Support</div></div></div>
+      </nav>
+
+      <div style="margin-top:auto;display:flex;gap:8px;align-items:center;justify-content:space-between">
+        <div class="muted" style="font-size:12px">Connected as <strong>you</strong></div>
+        <div class="search-compact">⚙</div>
+      </div>
+    </aside>
+
+    <!-- Channels list -->
+    <section class="card channels">
+      <div class="channel-header">
+        <div style="display:flex;gap:8px;align-items:center"><strong>Channels</strong><div class="muted" style="font-size:12px">(4)</div></div>
+        <div class="muted">+ New</div>
+      </div>
+      <div class="channel-list" id="channelList" role="list">
+        <!-- Items injected by JS for demo -->
+      </div>
+    </section>
+
+    <!-- Chat pane -->
+    <main class="card chat">
+      <header class="chat-header">
+        <div class="chat-title">
+          <div class="avatar">G</div>
+          <div>
+            <div style="font-weight:700"># general</div>
+            <div class="muted" style="font-size:12px">Company announcements & everyday chat</div>
+          </div>
+        </div>
+        <div class="flex">
+          <div class="muted">Members: 28</div>
+          <div class="muted">Threads</div>
+        </div>
+      </header>
+
+      <section class="chat-window" id="chatWindow" aria-live="polite">
+        <!-- messages appended by JS -->
+      </section>
+
+      <div class="composer" role="group" aria-label="message composer">
+        <div class="tool-btn" id="btn-emoji" title="Emoji">🙂</div>
+        <textarea id="composerInput" placeholder="Message #general" aria-label="Message input"></textarea>
+        <div class="tool-btn" id="btn-attach" title="Attach">📎</div>
+        <button class="send" id="sendBtn">Send</button>
+      </div>
+    </main>
+
+    <!-- Right pane: members/details -->
+    <aside class="card right">
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <strong>People</strong>
+        <div class="muted">Search</div>
+      </div>
+      <div class="section" style="margin-top:8px;display:flex;flex-direction:column;gap:8px;overflow:auto;max-height:calc(80vh - 200px)">
+        <div class="member"><div class="avatar" style="width:44px;height:44px;border-radius:10px">M</div><div style="flex:1"><div style="font-weight:700">Maya</div><div class="muted">Product Manager</div></div><div class="status online" title="Online"></div></div>
+        <div class="member"><div class="avatar" style="width:44px;height:44px;border-radius:10px">A</div><div style="flex:1"><div style="font-weight:700">Arun</div><div class="muted">Support</div></div><div class="status away" title="Away"></div></div>
+        <div class="member"><div class="avatar" style="width:44px;height:44px;border-radius:10px">S</div><div style="flex:1"><div style="font-weight:700">Surya</div><div class="
